@@ -1,3 +1,12 @@
+2024-10-04T00:40:48Z:
+* notice: GitHub Actions Run: https://github.com/andry81-builds/actions/actions/runs/11171956541 # 438
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-builds--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-04
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 69 87 / 71 89
+* notice: next accum: outdated-unq outdated-all / unq all: 70 88 / 71 89
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-09-19] / []
+
 2024-10-01T00:45:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81-builds/actions/actions/runs/11116490933 # 435
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-builds--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-01
